{
    "version": 1,
    "name": "Woogo",
    "maps": [
        {
            "name": "Attack",
            "id": "819db94a-00ff-4fa5-823f-d89afa83f287",
            "actions": [
                {
                    "name": "Atk",
                    "type": "Button",
                    "id": "c649f16b-b2c1-45c6-9996-03214fee63de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "9d34aa68-a8bb-4c72-8b24-355e298c23ee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Cmd1",
                    "type": "Button",
                    "id": "670e459e-9410-4716-af17-21579946dd56",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cmd2",
                    "type": "Button",
                    "id": "8bacd9c9-8f0f-46cd-8dae-3d10adfbe979",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cmd3",
                    "type": "Button",
                    "id": "e92ba70b-0894-4273-86cf-a481a0734825",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Speicial",
                    "type": "Button",
                    "id": "2925f837-4cf8-4116-83e0-25f17c031527",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70c1e506-96da-4cf2-a130-3a817c81c9c4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cmd1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1984643f-cfa6-4d26-82bd-767db9b371b7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cmd2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d41bd63-c996-4bad-87ed-a20ea34fa35b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cmd3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "849175ce-e6db-4af2-8c87-410c7835b11b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speicial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b72a3e2b-d96e-4068-804c-760158f85c98",
                    "path": "<Keyboard>/#(X)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "458a0a52-e920-4eed-b96a-d887d946b667",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Atk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard",
            "bindingGroup": "KeyBoard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}